--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "18.14.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -23,6 +24,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "file-saver": "^2.0.5",
     "midjourney-client": "^1.0.2",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
