--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/file-saver": "^2.0.5",
     "@types/node": "18.14.5",
+    "@types/randomstring": "^1.1.8",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.3.0",
+    "aws-sdk": "^2.1350.0",
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
@@ -30,12 +32,13 @@
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "next-redux-wrapper": "^8.1.0",
+    "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-textarea-autosize": "^8.4.0",
-    "replicate": "^0.4.0",
+    "replicate": "git+https://github.com/replicate/replicate-javascript.git",
     "styled-components": "^5.3.8",
     "typescript": "4.9.5"
   },
