--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "file-saver": "^2.0.5",
+    "get-user-locale": "^2.2.1",
     "midjourney-client": "^1.0.2",
     "moment": "^2.29.4",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
+    "next-intl": "^2.12.0",
     "next-redux-wrapper": "^8.1.0",
     "randomstring": "^1.2.3",
     "react": "18.2.0",
