--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.3.0",
     "aws-sdk": "^2.1350.0",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
@@ -48,7 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "prisma": "^4.11.0"
+    "prisma": "^4.11.0",
+    "tailwindcss": "^3.2.7"
   }
 }
