--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/file-saver": "^2.0.5",
     "@types/node": "18.14.5",
+    "@types/nodemailer": "^6.4.7",
     "@types/randomstring": "^1.1.8",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -36,6 +37,7 @@
     "next-auth": "^4.20.1",
     "next-intl": "^2.12.0",
     "next-redux-wrapper": "^8.1.0",
+    "nodemailer": "^6.9.1",
     "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
