--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-intl": "^2.12.0",
     "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.9.1",
+    "openai": "^3.2.1",
     "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
