--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "moment": "^2.29.4",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
-    "next-intl": "^2.12.0",
+    "next-intl": "^2.14.0-beta.2",
     "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.9.1",
     "openai": "^3.2.1",
