--- a/package.json
+++ b/package.json
@@ -16,32 +16,31 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/file-saver": "^2.0.5",
     "@types/node": "18.14.5",
     "@types/nodemailer": "^6.4.7",
     "@types/randomstring": "^1.1.8",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.3.0",
     "aws-sdk": "^2.1350.0",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "file-saver": "^2.0.5",
+    "eslint-config-next": "^14.1.2",
     "get-user-locale": "^2.2.1",
+    "googleapis": "^133.0.0",
     "midjourney-client": "^1.0.2",
     "moment": "^2.29.4",
-    "next": "13.2.3",
+    "next": "^14.1.2",
     "next-auth": "^4.20.1",
     "next-intl": "^2.14.0-beta.2",
     "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.9.9",
     "openai": "^3.2.1",
     "randomstring": "^1.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-textarea-autosize": "^8.4.0",
